--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;700;900&display=swap');
-@import url('../media/font.otf');
+@font-face { font-family: "MADE dillan"; src:url("../media/font.otf"), url("../media/font.otf")  format("opentype"),
+}
 
 * {
 	margin: 0;
@@ -114,7 +115,8 @@ header .clouds img {
 }
 
 .fondo {
-	background: url(../media/fondo.jpg)  no-repeat bottom right;
+	background-color: #0093E9;
+	background-image: linear-gradient(160deg, #0093E9 0%, #98d5ff 100%);
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -454,7 +456,8 @@ p {
     grid-template-columns: 1fr;
     justify-content: center;
 	min-height: 100vh;
-	background: #151515 url("../media/svg/fondo12.svg") no-repeat top center;
+	background: #151515 url("../media/svg/fondo12.svg") no-repeat center;
+	background-position: 0 1cm;
 	background-size: cover;
 }
 
