--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;700;900&display=swap');
-@font-face { font-family: "MADE dillan"; src:url("../media/font.otf"), url("../media/font.otf")  format("opentype"),
+@font-face {
+    font-family: "MADE dillan";
+    src: url("../media/font.otf");
 }
 
 * {
